--- a/package.json
+++ b/package.json
@@ -1,31 +1,43 @@
 {
   "name": "egora-library",
-  "main": "dist/index.js",
+  "version": "1.0.0",
+  "description": "Component library for Egora platform",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "babel src --out-dir dist --copy-files"
+    "build": "rollup -c"
   },
+  "keywords": [],
+  "author": "Egora",
+  "license": "MIT",
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "dependencies": {
+    "@iconify-icons/mdi": "^1.2.48",
+    "@iconify/react": "^6.0.0",
+    "@mui/material": "^5.15.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
-    "babel-preset-react-app": "^10.0.1"
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "rollup": "^4.15.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "babel": {
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
     ]
-  },
-  "dependencies": {
-    "@iconify-icons/mdi": "^1.2.48",
-    "@iconify/react": "^6.0.0",
-    "@mui/material": "^7.1.2"
   }
 }
