--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@iconify-icons/mdi": "^1.2.48",
     "@iconify/react": "^6.0.0",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^5.15.0",
     "uuid": "^11.1.0"
   },
