--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@iconify/react": "^6.0.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^5.15.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@react-google-maps/api": "^2.20.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
