--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@iconify/react": "^6.0.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^5.15.0",
-    "uuid": "^11.1.0",
-    "@react-google-maps/api": "^2.20.7"
+    "@react-google-maps/api": "^2.20.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -33,7 +33,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^4.15.2",
+    "rollup": "^4.46.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2"
   },
