--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^5.15.0",
     "@react-google-maps/api": "^2.20.7",
-    "uuid": "^11.1.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
